# GammaRay

./: .clang-format  .clang-tidy  .clangd  .clazy  .cmake-format.py  .codedocs  .codespellrc  .editorconfig  .emacs-dirvars  .git-blame-ignore-revs  .gitignore  .gitmodules  .kateconfig  .krazy  .markdownlint.jsonc  .mdlrc.rb  .pre-commit-config.yaml  .pylintrc  .qmake.conf  .travis.yml  CHANGES  CMakeLists.txt  CMakePresets.json  CMakeQt4To5Porting.cmake  CONTRIBUTORS.txt  Doxyfile  Doxyfile.cmake  GammaRay.appdata.xml  GammaRay.desktop  GammaRayConfig.cmake.in  INSTALL.md  Install.txt  LICENSE.BSD2.txt  LICENSE.GPL.txt  LICENSE.US.txt  LICENSE.txt  README  README.md  REUSE.toml  ReadMe-commercial.txt  (+140 more)
app/: CMakeLists.txt  Info.plist.in  main.cpp
client/: CMakeLists.txt  Info.plist.in  classesiconsrepositoryclient.cpp  classesiconsrepositoryclient.h  client.cpp  client.h  clientconnectionmanager.cpp  clientconnectionmanager.h  clientdevice.cpp  clientdevice.h  clienttoolmodel.cpp  clienttoolmodel.h  enumrepositoryclient.cpp  enumrepositoryclient.h  favoriteobjectclient.cpp  favoriteobjectclient.h  gammaray_client_export.h  localclientdevice.cpp  localclientdevice.h  main.cpp  messagestatisticsmodel.cpp  messagestatisticsmodel.h  objectclient.cpp  objectclient.h  paintanalyzerclient.cpp  paintanalyzerclient.h  probecontrollerclient.cpp  probecontrollerclient.h  processtracker.cpp  processtracker.h  processtracker_linux.cpp  processtracker_linux.h  processtracker_macos.cpp  processtracker_macos.h  processtracker_windows.cpp  processtracker_windows.h  propertycontrollerclient.cpp  propertycontrollerclient.h  remotemodel.cpp  remotemodel.h  (+8 more)
cmake/: CMakeLists.txt  ECMEnableSanitizers.cmake  ECMFindModuleHelpers.cmake  ECMGeneratePriFile.cmake  ECMQt4To5Porting.cmake  ECMQueryQmake.cmake  FindGlslang.cmake  FindGraphviz.cmake  FindQmlLint.cmake  FindQt5Transitional.cmake  FindWayland.cmake  GammaRayMacros.cmake  GammaRayMacrosInternal.cmake  GammaRayProbeABI.cmake  GammaRayQt4To5Porting.cmake  PackageIFW.cmake  Qt5LegacySupport.cmake  QtInstallPaths.cmake  Toolchain-GCC-i686.cmake  Toolchain-IOS.cmake  Toolchain-Linux-GCC-i686.cmake  Toolchain-OSX-GCC-i686.cmake  Toolchain-OSX-clang-x86_64.cmake  Toolchain-QNX-common.cmake  Toolchain-QNX65.cmake  Toolchain-QNX650-armv7.cmake  Toolchain-QNX650-x86.cmake  Toolchain-QNX66.cmake  Toolchain-QNX660-armv7.cmake  Toolchain-QNX660-common.cmake  Toolchain-QNX660-x86.cmake  Toolchain-QNX700-aarch64.cmake  Toolchain-QNX700-armv7.cmake  Toolchain-QNX700-common.cmake  Toolchain-QNX700-x86.cmake  Toolchain-QNX700-x86_64.cmake  Toolchain-RPI.cmake  Toolchain-Yocto.cmake  Toolchain-android.cmake  Toolchain-blackberry-armv7le.cmake  (+3 more)
common/: CMakeLists.txt  classesiconsextractor.cpp  classesiconsindex.cpp  classesiconsindex.h  classesiconsindex_data.cpp  classesiconsindex_data.cpp.in  classesiconsrepository.cpp  classesiconsrepository.h  commonutils.cpp  commonutils.h  endpoint.cpp  endpoint.h  enumdefinition.cpp  enumdefinition.h  enumrepository.cpp  enumrepository.h  enums.h  enumvalue.cpp  enumvalue.h  favoriteobjectinterface.cpp  favoriteobjectinterface.h  gammaray_common_export.h  message.cpp  message.h  metatypedeclarations.h  methodargument.cpp  methodargument.h  modelevent.cpp  modelevent.h  modelinspectorinterface.cpp  modelinspectorinterface.h  modelroles.h  modelutils.cpp  modelutils.h  networkselectionmodel.cpp  networkselectionmodel.h  objectbroker.cpp  objectbroker.h  objectid.h  objectidfilterproxymodel.cpp  (+68 more)
core/: CMakeLists.txt  aboutpluginsdialog.cpp  aboutpluginsdialog.h  abstractbindingprovider.cpp  abstractbindingprovider.h  aggregatedpropertymodel.cpp  aggregatedpropertymodel.h  associativepropertyadaptor.cpp  associativepropertyadaptor.h  attributemodel.cpp  attributemodel.h  bindingaggregator.cpp  bindingaggregator.h  bindingnode.cpp  bindingnode.h  classesiconsrepositoryserver.cpp  classesiconsrepositoryserver.h  connectionfilterproxymodel.cpp  connectionfilterproxymodel.h  connectionmodel.cpp  connectionmodel.h  displayhelpers.cpp  displayhelpers.h  dynamicpropertyadaptor.cpp  dynamicpropertyadaptor.h  enumrepositoryserver.cpp  enumrepositoryserver.h  enumutil.cpp  enumutil.h  execution.cpp  execution.h  favoriteobject.cpp  favoriteobject.h  gammaray_core_export.h  jsonpropertyadaptor.cpp  jsonpropertyadaptor.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  metaenum.h  (+131 more)
docs/: CMakeLists.txt  Doxyfile.cmake  GammaRay-CopyrightAssignmentForm.docx  KDAB-CopyrightAssignmentForm.docx  Mainpage.dox  footer.html  gammaray.pod
examples/: CMakeLists.txt
hooking/: CMakeLists.txt  abstractfunctionoverwriter.cpp  abstractfunctionoverwriter.h  entry_unix.cpp  entry_win.cpp  functionoverwriterfactory.cpp  functionoverwriterfactory.h  hooks.cpp  hooks.h  preload.cpp  probecreator.cpp  probecreator.h  unixfunctionoverwriter.cpp  unixfunctionoverwriter.h  winfunctionoverwriter.cpp  winfunctionoverwriter.h
injector/: CMakeLists.txt  abstractinjector.cpp  abstractinjector.h  detourinjector.cpp  detourinjector.h  gdbinjector.cpp  gdbinjector.h  injectorfactory.cpp  injectorfactory.h  injectorstyleplugin.cpp  injectorstyleplugin.h  interactiveprocess.cpp  interactiveprocess.h  preloadcheck.cpp  preloadcheck.h  preloadinjector.cpp  preloadinjector.h  styleinjector.cpp  styleinjector.h  windllinjector.cpp  windllinjector.h
inprocessui/: CMakeLists.txt  main.cpp
launcher/: CMakeLists.txt  attachdialog.cpp  attachdialog.h  attachdialog.ui  clientlauncher.cpp  clientlauncher.h  connectpage.cpp  connectpage.h  connectpage.ui  gammaray_launcher_export.h  launcher.cpp  launcher.h  launcherfinder.cpp  launcherfinder.h  launcherwindow.cpp  launcherwindow.h  launcherwindow.ui  launchoptions.cpp  launchoptions.h  launchpage.cpp  launchpage.h  launchpage.ui  libraryutil.cpp  libraryutil.h  main.cpp  networkdiscoverymodel.cpp  networkdiscoverymodel.h  pefile.cpp  pefile.h  probeabi.cpp  probeabi.h  probeabidetector.cpp  probeabidetector.h  probeabidetector_dummy.cpp  probeabidetector_elf.cpp  probeabidetector_mac.cpp  probeabidetector_win.cpp  (+18 more)
(+2137 files in other folders)
